# Kauno-Technologij-Universiteto-Kompiuteri-katedros-inventoriaus-valdymo-sistema

./: .gitignore  db.sql
RFID_irasymas/: CMakeLists.txt
RFID_irasymas/main/: CMakeLists.txt  idf_component.yml  main.c  rfid.c
RFID_irasymas/main/headers/: rfid.h
RFID_irasymas/main/src/: MFRC522.c  rfid.c
elektroninis_uzraktas/: CMakeLists.txt
elektroninis_uzraktas/main/: CMakeLists.txt  Kconfig.projbuild  idf_component.yml  main.c
elektroninis_uzraktas/main/certs/: certificate.pem  prvtkey.pem  servercert.pem
elektroninis_uzraktas/main/headers/: MFRC522.h  crypto.h  device_details.h  https_client.h  lock.h  rfid.h  webserver.h  wifi.h
elektroninis_uzraktas/main/src/: crypto.c  https_client.c  lock.c  rfid.c  webserver.c  wifi.c
raktu_poros_generatorius/: keypair_generator.php
sistema/: crypto.php  email_verification.php  index.php  new_password.php  password_reset.php  pw_reset.php
sistema/config/: config.php  functions.php  state.php
sistema/css/: dropdown_search.css  footer.css  header.css  index.css  mdb.min.css  style.css
sistema/includes/: footer_admin.php  footer_employee.php  footer_student.php  header_admin.php  header_employee.php  header_student.php
sistema/js/: header.js  qr_barcode_reader.js  search_accordion.js  search_accordion_multiple_tabs.js  search_table_1.js  search_table_2.js  search_w_role.js  state.js  validation.js
sistema/php/admin/: add_inventory.php  add_storage.php  analysis.php  generated_sticker.php  inventory.php  inventory_information.php  loans.php  (+5 more)
sistema/php_login_register/: login_register.php  logout.php
(+8 files in other folders)
